[package]
name = "mappedheap"
description = "An extensible memory mapped file that keeps track of used and free pages with a simple freelist allocator."
license = "MIT"
version = "0.1.1"
authors = ["main() <main@ehvag.de>"]

[dependencies]
libc = "0.2"
futex = "0.1"
tempfile = "2.1"

[dev-dependencies]
rand = "0.3"
